# taipei-theft-map

./: .env  .pdm-python  README.md  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.github/workflows/: deploy-page.yaml
data/: bike.csv  bike_fail.csv  bike_geo.json  car_data.csv  car_fail.csv  car_geo.json  cycle_data.csv  cycle_fail.csv  cycle_geo.json  house_data.csv  house_fail.csv  house_geo.json
data/bike/: bike_data_0.json  bike_data_1000.json  bike_data_2000.json  bike_data_3000.json
data/car/: car_data_0.json  car_data_1000.json  car_data_2000.json  car_data_3000.json
data/cycle/: cycle_data_0.json  cycle_data_1000.json  cycle_data_2000.json
data/house/: house_data_0.json  house_data_1000.json  house_data_2000.json  house_data_3000.json
scripts/: .pdm-python  fetch_data.sh  geocode.py  test.ipynb
src/: App.tsx  vite-env.d.ts
